--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,6 @@
     --pading-container: 100px 0;
     --color-title: #001A49;
 }
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -24,14 +23,12 @@ body {
 .hero {
     width: 100%;
     height: 100vh;
-    /* min-width: 600px; */
     max-height: 800px;
     position: relative;
     display: grid;
     grid-template-rows: 100px 1fr;
     color: #fff;
 }
-
 .hero::before {
     content: "";
     position: absolute;
@@ -56,10 +53,6 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    /* background-color: #1c1c1d; */
-    /* opacity: .1; */
-    /* mix-blend-mode: lighten; */
-    /* mix-blend-mode: overlay; */
     z-index: -2;
 }
 /*- - - - N A V - - - - -*/
@@ -69,11 +62,9 @@ video {
     display: flex;
     align-items: center;
 }
-
 .nav__title {
     font-weight: 300;
 }
-
 .nav__link {
     margin-left: auto;
     padding: 0;
@@ -82,11 +73,9 @@ video {
     grid-auto-columns: max-content;
     gap: 2em;
 }
-
 .nav__items {
     list-style: none;
 }
-
 .nav__links {
     color: #fff;
     text-decoration: none;
@@ -94,18 +83,15 @@ video {
 .nav__links:hover {
     border-bottom: 1px solid white;
 }
-
 .nav__menu {
     margin-left: auto;
     cursor: pointer;
     display: none;
 }
-
 .nav__img {
     display: block;
     width: 30px;
 }
-
 .nav__close {
     display: var(--show, none);
     z-index: 6;
@@ -113,7 +99,6 @@ video {
 /*- - - - - H E R O   CONTAINER- - - - -*/
 
 .hero__container {
-    /* max-width: 800px; */
     --padding-container: 0;
     display: grid;
     grid-auto-rows: max-content;
@@ -132,7 +117,6 @@ video {
     justify-self: center;
     color: #fff;
     text-transform: uppercase;
-    /* color: rgb(22, 11, 15); */
     text-decoration: none;
     font-weight: bold;
     padding: 13px 30px;
@@ -142,7 +126,6 @@ video {
 #comienzaahora {
     background-color: rgba(216, 112, 147, 0.705);
 }
-
 main {
     margin: 0 auto;
     width: 100%;
@@ -165,11 +148,9 @@ main {
     text-transform: uppercase;
     text-align: center;
 }
-
 .about__paragraph {
     line-height: 1.7;
 }
-
 .about__main {
     width: 90%;
     gap: 1.5rem;
@@ -181,7 +162,6 @@ main {
     grid-template-rows: auto;
     place-items: center;
 }
-
 .about__icons {
     display: grid;
     gap: 1em;
@@ -190,7 +170,6 @@ main {
     overflow: hidden;
     margin: 0 auto;
 }
-
 .about__icon {
     width: 5rem;
 }
@@ -198,26 +177,22 @@ main {
 /*- - - - K N O W L E D G E - - - - - */
 
 .knowledge {
-    /* min-width: 600px; */
     background-color: #fff;
-     background-size: 20px 20px;
+    background-size: 20px 20px;
     background-position: 0 0,10px 10px;
     margin: 0 auto;
     overflow: hidden;
 }
-
 .knowledge__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1em;
     align-items: center;
-    padding: 4rem;
+    /* padding: 4rem; */
+    padding: 2.4rem 0;
     place-content: center;
-    /* justify-content: center; */
 }
-
 .knowledge__picture {
-    /* max-width: 500px; */
     width: 100%;
     height: 20rem;
     margin: 0 0 0 auto;
@@ -228,9 +203,6 @@ main {
 .knowledge__img {
     width: auto;
     height: 110%;
-    /* height: 100%; */
-    /* height: 20%; */
-    /* justify-content: flex-end; */
 }
 
 /*---BACKGROUND IMAGE KNOWLEDGE*/
@@ -275,15 +247,6 @@ main {
 .price {
     text-align: center;
 }
-
-/* .price__table {
-    padding-top: 60px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2.5em;
-    justify-content: space-evenly;
-    align-items: center;
-} */
 .price__table {
     padding-top: 60px;
     display: grid;
@@ -293,7 +256,6 @@ main {
     place-items: center;
 }
 .price__element {
-    /* background-color: rgb(255, 157, 190); */
     background: rgb(255,157,190);
     background: linear-gradient(3deg, rgba(255,157,190,1) 0%, rgba(185,66,178,1) 100%);
     text-align: center;
@@ -315,18 +277,6 @@ main {
 .price__element--cocolor {
     background-color: violet;
 }
-/* .price__element--best {
-    width: 370px;
-    padding: 60px 40px;
-    background-color: palevioletred;
-    --color-plan: rgba(0, 0, 0, 0.75);
-    --color-price: #fff;
-    --bg-cta: #ffffffd5;
-    --color-cta: palevioletred;
-    --color-items: #FFF;
-    background: rgb(255,255,255);
-background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 100%);
-} */
 .price__name {
     color: var(--color-plan);
     margin-bottom: 15px;
@@ -343,7 +293,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     font-size: 2.5rem;
     color: var(--color-price);
 }
-
 .price__items {
     margin-top: 35px;
     display: grid;
@@ -353,7 +302,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     margin-bottom: 50px;
     color: var(--color-items);
 }
-
 .price__cta {
     display: block;
     padding: 20px 0;
@@ -379,7 +327,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     /* background-color: #02027a; */
     justify-content: center;
 }
-
 .testimony__container {
     display: grid;
     grid-template-columns: 50px 1fr 50px;
@@ -387,9 +334,7 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     align-items: center;
     justify-content: center;
     /* margin: 0 auto; */
-
 }
-
 .testimony__body {
     display: grid;
     grid-template-columns: 1fr max-content;
@@ -413,9 +358,7 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     border-radius: 50%;
     object-fit: cover;
     margin: 0 auto;
-    /* display: none; */
 }
-
 .testimony__picture {
     width: 100%;
     justify-content: center;
@@ -428,7 +371,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     display: inline-block;
     padding: 5px;
 }
-
 .testimony__arrow {
     width: 90%;
     cursor: pointer;
@@ -445,7 +387,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     align-items: center;
     justify-content: center;
 }
-
 .cta--testimony {
     display: flex;
     justify-content: center;
@@ -457,30 +398,25 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
 .questions {
     text-align: center;
 }
-
 .questions__container {
     display: grid;
     gap: 2em;
     padding-top: 50px;
     padding-bottom: 100px;
 }
-
 .questions__padding {
     padding: 0;
     transition: padding .3s;
     border: 1px solid palevioletred;
     border-radius: 6px;
 }
-
 .questions__padding--add {
     padding-bottom: 30px;
 }
-
 .questions__answer {
     padding: 0 30px 0;
     overflow: hidden;
 }
-
 .questions__title {
     text-align: left;
     display: flex;
@@ -490,7 +426,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     color: var(--color-title);
     justify-content: space-between;
 }
-
 .questions__arrow {
     border-radius: 50%;
     background-color: palevioletred;
@@ -502,28 +437,22 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     margin-left: 10px;
     transition: transform .3s;
 }
-
 .questions__arrow--rotate {
     transform: rotate(180deg);
 }
-
 .questions__show {
     text-align: left;
     height: 0;
     transition: height .3s;
 }
-
 .questions__img {
     display: block;
 }
-
 .questions__copy {
     width: 60%;
     margin: 0 auto;
     margin-bottom: 30px;
 }
-
-
 
 
 /* - - - B O T O N D E S U B I R - - -*/
@@ -536,7 +465,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     height: 6.6rem;
     z-index: -1;
 }
-
 .go-top-button {
     width: 0rem;
     height: 0rem;
@@ -550,7 +478,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     transform: translate(-50%, -50%);
     z-index: -1;
 }
-
 .go-top-button i {
     position: absolute;
     font-size: 1.7rem;
@@ -560,7 +487,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     color: white;
     transition: .2s;
 }
-
 .show {
     z-index: 10;
     margin: 0;
@@ -578,10 +504,8 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     height: 3.6rem;
     z-index: 11;
 }
-
 .show i {
     transform: translate(-50%, -50%) scale(1);
-
 }
 
 @keyframes popup{
@@ -605,22 +529,18 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     width: 100%;
     /* min-width: 60rem; */
 }
-
 .footer__title {
     font-weight: 300;
-    font-size: 2rem; 
+    font-size: 2rem;
     color: #fff;
     margin-bottom: 30px;
 }
-
 .footer__container {
     display: flex;
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid #fff;
-    /* padding-bottom: 60px; */
 }
-
 .nav--footer {
     padding-bottom: 20px;
     display: grid;
@@ -629,26 +549,21 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     height: 100%;
     justify-content: space-around;
 }
-
 .footer__copy {
     --pading-container: 30px 0;
     text-align: center;
     color: #fff;
     background-color: palevioletred;
 }
-
 .footer__copyright {
     font-weight: 300;
 }
-
 .footer__icons {
     margin-bottom: 10px;
 }
-
 .footer__img {
     width: 30px;
 }
-
 .footer__container {
     flex-wrap: wrap;
     width: 100%;
@@ -700,7 +615,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
         width: 4rem;
         cursor: pointer;
         z-index: 6;
-
     }
     .nav__img {
         width: 4rem;
@@ -751,7 +665,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
         height: 125px;
         margin: 0 auto;
         margin-left: calc(50% - 62.5px);
-        /* display: none; */
     }
     .questions__copy {
         width: 100%;
@@ -775,13 +688,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
     .subtitle {
         font-size: 1.8rem;
     }
-    .price__element {
-        /* width: 90%; */
-    }
-    /* .price__element--best {
-        width: 90%;
-        padding: 40px;
-    } */
     .plan__price {
         font-size: 2rem;
     }
@@ -843,9 +749,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
         .knowledge__container {
             padding: 0rem;
         }
-        .subtitle {
-            /* margin-left: 5rem; */
-        }
         .subtitle-testimony {
             width: 15rem;
             text-align: center;
@@ -879,7 +782,6 @@ background: linear-gradient(3deg, rgba(255,255,255,1) 0%, rgba(218,112,148,1) 10
         }
         .about__main {
             grid-template-columns: repeat(auto-fit, minmax(150px, auto));
-        
         }
         .about__paragraph {
             max-width: 200px;
